--- a/qt.html
+++ b/qt.html
@@ -110,6 +110,7 @@
         <li><a href="/sales-focust">Sales Forecasting(Quantitative)</a></li>
         <li><a href="/">Regression Variables</a></li>
         <li><a href="/">Sales Forecasting(Qualitative)</a></li>
+        <li><a href="/logout">logout</a></li>
     </ul>
     <figure class="highcharts-figure">
         <form class=sales-form>
