--- a/sf.html
+++ b/sf.html
@@ -185,7 +185,7 @@
         let qry = prodQry + "&include=Product";
         let method = $('#method').val();
         if (method != 1) {
-            alert(method);
+            //alert(method);
             qry += "&yrs=" + yrs;
         }
 
